--- a/templates/vote.html
+++ b/templates/vote.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>投票ありがとうございました</title>
-    <link href="path/to/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     
@@ -20,7 +20,7 @@
       </div>
       <div class="col-12 col-md-10">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+          <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" aria-valuenow="{{kinoko_percent|safe}}" aria-valuemin="0" aria-valuemax="100" style="width: {{kinoko_percent|safe}}%"></div>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
       </div>
       <div class="col-12 col-md-10">
         <div class="progress">
-          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" aria-valuenow="{{takenoko_percent|safe}}" aria-valuemin="0" aria-valuemax="100" style="width: {{takenoko_percent|safe}}%"></div>
         </div>
       </div>
     </div>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="text-center mt-3">
-      <a class="btn btn-primary" href="/">投票サイトに戻る</a>
+      <a class="btn btn-primary" href="/">投票サイトに戻る</a></p>
     </div>
   </div>
 </main>
